# ECS

./: .gitignore  ANode.hpp  CMakeLists.txt  Core.cpp  Core.hh  CoreEvent.hh  CoreProxy.cpp  CoreProxy.hh  CoreSystemData.hh  ECS.md  EManager.cpp  EManager.hh  EManagerEvent.cpp  EManagerEvent.hh  Entity.cpp  Entity.hh  EntityIDGenerator.hh  EntityManager.cpp  EntityManager.hh  EntityManagerEvent.cpp  EntityManagerEvent.hh  FileSearcher.cpp  FileSearcher.hh  IC.hh  IDComponent.cpp  IDComponent.hh  IDCounter.hpp  IDEntity.cpp  IDEntity.hh  IDEvent.cpp  IDEvent.hh  IDSystem.hh  IE.hh  IEListener.hh  IS.hh  Parser.hpp  README.md  SafeQueue.hpp  SafeQueue.md  StartupLoader.cpp  (+3 more)
C/: BaseComp.hh  CIDGenerator.cpp  CIDGenerator.hh  CMakeLists.txt  CRTPC.hpp  C_lib.hh  IC.hh  IDComponent.hh  script.sh
C/BaseComp/: BaseComp.cpp  BaseComp.hh  CMakeLists.txt
C/CIDGenerator/: CIDGenerator.cpp  CIDGenerator.hh  CMakeLists.txt
C/CManager/: CMakeLists.txt  CManager.cpp  CManager.hh
C/Commands/: CMakeLists.txt  Commands.cpp  Commands.hpp
C/CompDrawable/: CMakeLists.txt  CompDrawable.cpp  CompDrawable.hh
C/CompTerminalDrawable/: CMakeLists.txt  CompTerminalDrawable.cpp  CompTerminalDrawable.hh  CompTerminalDrawable_lib.cpp
C/Polygon/: CMakeLists.txt  Polygon.hh  Polygon_lib.cpp
C/TemplateComp/: CMakeLists.txt  DefaultInfo.hh  Polygon.hpp  Text.hpp
C/TemplateText/: CMakeLists.txt  TemplateText.hpp
C/TerminalComponents/: CMakeLists.txt  Polygon.cpp  Polygon.hh  Polygon_lib.cpp  TerminalColor.cpp  TerminalColor.hh  TerminalComponent_lib.cpp  Text.cpp  Text.hh  Text_lib.cpp
C/TerminalDrawable/: CMakeLists.txt  TerminalDrawable.cpp  TerminalDrawable.hh  TerminalDrawable_lib.cpp
C/TerminalText/: CMakeLists.txt  TerminalText.cpp  TerminalText.hh  TerminalText_lib.cpp
C/TextInput/: CMakeLists.txt  TextInput.cpp  TextInput.hh  TextInputState.cpp  TextInputState.hh
C/Transform/: CMakeLists.txt  Transform.cpp  Transform.hh  Transform.hpp  Transform_lib.cpp
CLIParser/: CLIParser.cpp  CLIParser.hh  CLIParser.md  CLIParserParselets.cpp  CMakeLists.txt
CMakeModules/: CodeCoverage.cmake
E/: CMakeLists.txt  CRTPE.hpp  CoreEvent.cpp  CoreEvent.hh  CoreEvent_lib.cpp  EIDGenerator.cpp  EIDGenerator.hh  EManager.cpp  EManager.hh  E_lib.hh  IDEvent.hh  IE.hh  IEListener.hh
E/CLISystemEvent/: CLISystemEvent.cpp  CLISystemEvent.hh  CLISystemEvent_lib.cpp  CMakeLists.txt
E/CManagerEvent/: CMakeLists.txt  CManagerEvent.cpp  CManagerEvent.hh  CManagerEvent_lib.cpp
E/CoreCommandsEvent/: CMakeLists.txt  CoreCommandsEvent.cpp  CoreCommandsEvent.hh
E/CoreEvent/: CMakeLists.txt  CoreEvent.cpp  CoreEvent.hh  CoreEvent_lib.cpp
E/DebugEvent/: CMakeLists.txt  DebugEvent.cpp  DebugEvent.hh  DebugEvent_lib.cpp
E/EIDGenerator/: CMakeLists.txt  EIDGenerator.cpp  EIDGenerator.hh
E/EManager/: CMakeLists.txt  EManager.cpp  EManager.hh
E/EManagerEvent/: CMakeLists.txt  EManagerEvent.cpp  EManagerEvent.hh  EManagerEvent_lib.cpp
E/EntityManagerEvent/: CMakeLists.txt  EntityManagerEvent.cpp  EntityManagerEvent.hh  EntityManagerEvent_lib.cpp
E/TextInputUpdaterEvents/: CMakeLists.txt  TextInputUpdaterEventsIn.hpp  TextInputUpdaterEventsOut.hpp
Entity/: CMakeLists.txt  Entity.cpp  Entity.hh  EntityIDGenerator.cpp  EntityIDGenerator.hh  EntityManager.cpp  EntityManager.hh  IDEntity.hh
Log/: CMakeLists.txt  Log.cpp  Log.hh
S/: CLISystem.cpp  CMakeLists.txt  CRTPS.hpp  IDSystem.cpp  IDSystem.hh  IS.hh  SIDGenerator.cpp  SIDGenerator.hh  S_lib.hh  macros.hh
S/CLI/: CLI.cpp  CLI.hh  CLI_lib.cpp  CMakeLists.txt
S/CLISystem/: CLISystem.cpp  CLISystem.hh  CLISystem_lib.cpp  CMakeLists.txt
S/CommandsInterpreter/: CMakeLists.txt  CommandsInterpreter.cpp  CommandsInterpreter.hh  CommandsInterpreter_lib.cpp
S/CoreCommands/: CMakeLists.txt  CoreCommands.cpp  CoreCommands.hh  CoreCommands_lib.cpp
S/CoreProxy/: CMakeLists.txt  CoreProxy.cpp  CoreProxy.hh
S/CoreSystemProxy/: CMakeLists.txt  CoreSystemProxy.cpp  CoreSystemProxy.hh
S/Debug/: CMakeLists.txt  Debug.cpp  Debug.hh  Debug_lib.cpp
S/DebugSystem/: CMakeLists.txt  DebugSystem.cpp  DebugSystem.hh  DebugSystem_lib.cpp
S/NCurseSystem/: CMakeLists.txt  NCurseSystem.cpp  NCurseSystem.hh  NCurseSystem_lib.cpp
S/NCurses/: CMakeLists.txt  NCurses.cpp  NCurses.hh  NCurses_lib.cpp
S/NCursesSystem/: CMakeLists.txt  NCursesSystem.cpp  NCursesSystem.hh  NCursesSystem_lib.cpp
S/ReloadSystemTest/: CMakeLists.txt  ReloadSystemTest.cpp  ReloadSystemTest.hh  ReloadSystemTest_lib.cpp
S/SIDGenerator/: CMakeLists.txt  SIDGenerator.cpp  SIDGenerator.hh
S/TextInputUpdater/: CMakeLists.txt  TextInputUpdater.cpp  TextInputUpdater.hh  TextInputUpdater_lib.cpp
S/Utility/: macros.hh
Utility/: Bresenham.hpp  CMakeLists.txt  Fwd.hh  IDCenter.hpp  IDCounter.hpp  IIDGenerator.hpp  TemplateUniqueID.hpp  Vector.hpp  meta.hpp
Utility/Vector/: CMakeLists.txt  Vector.hh
Utility/Vector3/: CMakeLists.txt  Vector3.cpp  Vector3.hh
lel_library/: ANode.md  CMakeLists.txt  DLLoader.hpp  DLLoader.md  DLLoader_concept.hpp  Parser.md  Parser_concept.hpp  README.md
lel_library/CLIParser/: CLIParser.cpp  CLIParser.hh  CLIParserOutputs.cpp  CLIParserOutputs.hh  CLIParserParselets.hh  CLIProducer.cpp  CLIProducer.hh
lel_library/Log/: CMakeLists.txt  Log.md
lel_library/OSDLLoader/: CMakeLists.txt  LinuxDLLoader.cpp  LinuxDLLoader.hh  OSDLLoader.hh  OSDLLoader.md  WindowsDLLoader.cpp
lel_library/Threadpool/: ThreadPool.cpp  ThreadPool.md
lel_library/meta/: has_base.hpp  has_method.hpp  has_operator.hpp  has_variable.hpp  meta.md
lel_library/sample/: CMakeLists.txt
lel_library/sample/machinelearning/: CMakeLists.txt  ML_ANode.hh  ML_Circuit.cpp  ML_Input.hh  ML_Output.hh  ML_SVM.cpp  main.cpp
lel_library/sample/machinelearning/script/: export  fclean
lel_library/sample/machinelearning/unit_tests/: UT.cpp  main.cpp
lel_library/script/: fclean.bat
lel_library/script/ut_scripts/: unit_tests.sh  ut_prints.sh
lel_library/test/: CMakeLists.txt  OSLoader_test.cpp  threadpool_test.cpp
sample/machinelearning/unit_tests/: CMakeLists.txt
(+24 files in other folders)
