include(GenerateExportHeader)

if(UNIX)
  set(COMP_OUTPUT_LOCATION ${OUTPUT_LOCATION}/lib/C)
elseif(WIN32)
  set(COMP_OUTPUT_LOCATION ${OUTPUT_LOCATION})
endif(UNIX)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${COMP_OUTPUT_LOCATION})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${COMP_OUTPUT_LOCATION})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${COMP_OUTPUT_LOCATION})
foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
  string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
  set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
endforeach(OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)

add_subdirectory(BaseComp)

file(GLOB IDCOMPONENT_SRCS IDComponent*)
add_subdirectory(CIDGenerator)

subdirlist(COMP_LIST ${CMAKE_CURRENT_SOURCE_DIR})
list(REMOVE_ITEM COMP_LIST CIDGenerator BaseComp)
foreach(C ${COMP_LIST})
  add_subdirectory(${C})
endforeach()
