include(GenerateExportHeader)

if(UNIX)
  set(EVENT_OUTPUT_LOCATION ${OUTPUT_LOCATION}/lib/E)
elseif(WIN32)
  set(EVENT_OUTPUT_LOCATION ${OUTPUT_LOCATION})
endif(UNIX)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${EVENT_OUTPUT_LOCATION})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${EVENT_OUTPUT_LOCATION})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${EVENT_OUTPUT_LOCATION})
foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
  string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
  set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
endforeach(OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)

add_subdirectory(EIDGenerator)
add_subdirectory(EManager)

subdirlist(EVENT_LIST ${CMAKE_CURRENT_SOURCE_DIR})
list(REMOVE_ITEM EVENT_LIST EIDGenerator EManager)
foreach (EVENT ${EVENT_LIST})
  add_subdirectory(${EVENT})
endforeach()
