include(GenerateExportHeader)

if(UNIX)
  set(SYS_OUTPUT_LOCATION ${OUTPUT_LOCATION}/lib/S)
elseif(WIN32)
  set(SYS_OUTPUT_LOCATION ${OUTPUT_LOCATION})
endif(UNIX)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${SYS_OUTPUT_LOCATION})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${SYS_OUTPUT_LOCATION})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${SYS_OUTPUT_LOCATION})
foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
  string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
  set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
endforeach(OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)

file(GLOB IDSYSTEM_SRCS IDSystem*)

add_subdirectory(SIDGenerator)

subdirlist(SYS_LIST ${CMAKE_CURRENT_SOURCE_DIR})
list(REMOVE_ITEM SYS_LIST SIDGenerator)
foreach(S ${SYS_LIST})
  add_subdirectory(${S})
endforeach()
