set(MANAGER_NAME EManager)

file(GLOB SRCS *.cpp *.hh)
add_library(${MANAGER_NAME} SHARED ${SRCS})
target_include_directories(${MANAGER_NAME} PUBLIC
  ${CMAKE_BINARY_DIR}
  ${PROJECT_SOURCE_DIR})
target_link_libraries(${MANAGER_NAME} PUBLIC
  DebugEvent)

set_target_properties(${MANAGER_NAME} PROPERTIES IMPORTED_LOCATION ${OUTPUT_LOCATION})
generate_export_header(${MANAGER_NAME})
string(TOLOWER ${MANAGER_NAME} MANAGER_NAME_LOW)
install(TARGETS ${MANAGER_NAME} DESTINATION ${LIBRARY_INSTALL_DIR}/E)
install(FILES
  ${CMAKE_BINARY_DIR}/E/${MANAGER_NAME_LOW}_export.h
  DESTINATION ${INCLUDE_INSTALL_DIR})

set(MANAGER_NAME ${MANAGER_NAME} PARENT_SCOPE)
