set(IDLIB_NAME SIDGen)

file(GLOB SRCS *.cpp *.hh)

add_library(${IDLIB_NAME} SHARED ${SRCS} ${IDSYSTEM_SRCS})
target_include_directories(${IDLIB_NAME} PUBLIC
  ${CMAKE_BINARY_DIR}
  ${PROJECT_SOURCE_DIR})
set_target_properties(${IDLIB_NAME} PROPERTIES IMPORTED_LOCATION ${OUTPUT_LOCATION})

generate_export_header(${IDLIB_NAME})

string(TOLOWER ${IDLIB_NAME} IDLIB_NAME_LOW)
install(TARGETS ${IDLIB_NAME} DESTINATION ${LIBRARY_INSTALL_DIR}/S)
install(FILES
  ${HDRS}
  ${CMAKE_BINARY_DIR}/S/${IDLIB_NAME_LOW}_export.h
  DESTINATION ${INCLUDE_INSTALL_DIR})

set(IDLIB_NAME ${IDLIB_NAME} PARENT_SCOPE)
